welcome.lessons.welcome.methods.picture.PictureMono3.scala.error
PictureMono3:3: error: not found: value faireMotif1
faireMotif1()
^