welcome.lessons.welcome.methods.picture.PictureMono3.scala.code
override def run() {
faireMotif1()
}
